--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         
 
-          <img src="./assets/images/hero-banner.png" width="1474" height="426" alt="airplane" class="abs-img">
+          <img src="./assets/images/hero-banner.svg" width="100%" height="100%" alt="airplane" class="hero-banner">
 
         </div>
       </section>
