--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Sky Falcon Aviation - Luxury Jet Flights</title>
   <meta name="title" content="Sky Falcon Aviation - Luxury Jet Flights">
-  <meta name="description" content="This is a private flight html template made by codewithsadee">
+  <meta name="description" content="This is a private flight html template made by AbdulghafurYusuf">
 
   <!-- 
     - favicon
@@ -128,31 +128,6 @@
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #SERVICE
-      -->
-
-      <section class="section service" id="services" aria-label="service">
-        <div class="container">
-      <div class="about-content">
-
-          
-      
-
-        </div>
-      </section>
-
-
-
-
-
-      <!-- 
-        - #ABOUT
-      -->
 
       <section class="section about" id="about us" aria-label="about">
         <div class="container">
